--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ camel.springboot.main-run-controller=true
 
 camel.component.file.cluster.service.enabled = true
 camel.component.file.cluster.service.id = ${random.uuid}
-camel.component.file.cluster.service.root = camel-lock
+camel.component.file.cluster.service.root = c:/camel-lock
 camel.component.file.cluster.service.cluster-labels[group]=${project.groupId}
 camel.component.file.cluster.service.cluster-labels[app]=${project.artifactId}
 
