--- a/pom.xml
+++ b/pom.xml
@@ -46,12 +46,12 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-master-starter</artifactId>
         </dependency>
-        <!-- We use file based clustered Service so this is not needed now
+        <!-- We use file based clustered Service so this is not needed now -->
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-kubernetes-starter</artifactId>
         </dependency>
-        -->
+
     </dependencies>
 
     <build>
