--- a/src/main/fabric8/raw/role.yml
+++ b/src/main/fabric8/raw/role.yml
@@ -1,7 +1,7 @@
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
-  name: camel-leader-election
+  name: spring-camel-cluster-singleton
 rules:
 - apiGroups:
   - ""
