--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,15 +4,15 @@ spring.application.name=camel-singleton-cluster
 camel.springboot.main-run-controller=true
 
 # Enable the cluster service
-camel.component.kubernetes.cluster.service.enabled=true
-camel.component.kubernetes.cluster.service.cluster-labels[group]=${project.groupId}
-camel.component.kubernetes.cluster.service.cluster-labels[app]=${project.artifactId}
+#camel.component.kubernetes.cluster.service.enabled=true
+#camel.component.kubernetes.cluster.service.cluster-labels[group]=${project.groupId}
+#camel.component.kubernetes.cluster.service.cluster-labels[app]=${project.artifactId}
 
 
-#camel.component.file.cluster.service.enabled = true
-#camel.component.file.cluster.service.id = ${random.uuid}
-#camel.component.file.cluster.service.root = c:/camel-lock
-#camel.component.file.cluster.service.cluster-labels[group]=${project.groupId}
-#camel.component.file.cluster.service.cluster-labels[app]=${project.artifactId}
+camel.component.file.cluster.service.enabled = true
+camel.component.file.cluster.service.id = ${random.uuid}
+camel.component.file.cluster.service.root = /opt/lock
+camel.component.file.cluster.service.cluster-labels[group]=${project.groupId}
+camel.component.file.cluster.service.cluster-labels[app]=${project.artifactId}
 
 #logging.level.org.apache.camel=TRACE
