--- a/scripts/kubernetes/pv.yaml
+++ b/scripts/kubernetes/pv.yaml
@@ -7,7 +7,7 @@ spec:
   capacity:
     storage: 1Gi
   volumeMode: Filesystem
-  accessMode:
+  accessModes:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Recycle
 
